# GamePlay-deps

./: CMakeLists.txt
theora-1.1.1/: CMakeLists.txt
